add server urls

--- a/apps/backend/project.json
+++ b/apps/backend/project.json
@@ -19,7 +19,7 @@
     },
     "serve": {
       "executor": "@nx/js:node",
-      "defaultConfiguration": "development",
+      "defaultConfiguration": "production",
       "dependsOn": ["build"],
       "options": {
         "buildTarget": "backend:build",
